--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,22 @@
-asn1crypto==0.24.0
-attrs==17.4.0
-Automat==0.6.0
-beautifulsoup4==4.6.0
-blinker==1.4
-certifi==2018.1.18
-chardet==3.0.4
-click==6.7
-cloud-init==18.3
-colorama==0.3.7
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-cryptography==2.1.4
+bson==0.5.8
+Click==7.0
 cycler==0.10.0
-decorator==4.1.2
-distro-info==0.18
-Flask==0.12.2
-html5lib==0.999999999
-httplib2==0.9.2
-hyperlink==17.3.1
-idna==2.6
-incremental==16.10.1
-itsdangerous==0.24
+dnspython==1.16.0
+Flask==1.0.2
+itsdangerous==1.1.0
 Jinja2==2.10
-jsonpatch==1.16
-jsonpointer==1.10
-jsonschema==2.6.0
-keyring==10.6.0
-keyrings.alt==3.0
-language-selector==0.1
-lxml==4.2.1
-MarkupSafe==1.0
-matplotlib==2.1.1
-numexpr==2.6.4
-numpy==1.13.3
-oauthlib==2.0.6
-olefile==0.45.1
-PAM==0.4.2
-pandas==0.22.0
-Pillow==5.1.0
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycrypto==2.6.1
-pygobject==3.26.1
-pyinotify==0.9.6
-PyJWT==1.5.3
-pymongo[tls,srv]==3.7.2
-pyOpenSSL==17.5.0
-pyparsing==2.2.0
-pyserial==3.4
-python-apt==1.6.2
-python-dateutil==2.6.1
-python-debian==0.1.32
-pytz==2018.3
-pyxdg==0.25
-PyYAML==3.12
-requests==2.18.4
-requests-unixsocket==0.1.5
-scipy==0.19.1
-SecretStorage==2.3.1
-service-identity==16.0.0
-simplejson==3.13.2
-six==1.11.0
-ssh-import-id==5.7
-systemd-python==234
-tables==3.4.2
-Twisted==17.9.0
-ufw==0.35
-unattended-upgrades==0.1
-urllib3==1.22
-webencodings==0.5
-Werkzeug==0.14.1
-zope.interface==4.3.2
+kiwisolver==1.0.1
+MarkupSafe==1.1.1
+matplotlib==3.0.3
+mongo==0.2.0
+numpy==1.16.2
+pandas==0.24.2
+pymongo==3.7.2
+pyparsing==2.3.1
+python-dateutil==2.8.0
+pytz==2018.9
+scikit-learn==0.20.3
+scipy==1.2.1
+six==1.12.0
+sklearn==0.0
+Werkzeug==0.15.2
